@@ -1,3 +1,9 @@
+2002-11-26  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* generic/tclMain.c (Tcl_Main):	added Tcl_DeleteInterp and
+	* unix/tclAppInit.c (main):	Tcl_Finalize in -DPURIFY case to
+					help indentify memory leaks.
+
 2002-11-08  Andreas Kupries  <andreask@activestate.com>
 
 	* generic/tclProc.c (TclCloneProc): Helper for Tcl_CloneInterp. 
